terraform/securityGroup.tf
resource "aws_security_group" "security-group" {
  name        = "security-group"
  description = "default sg open for all"
  vpc_id      = aws_vpc.storage-cluster-vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "security-group"
  }
}
